--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -80,7 +80,7 @@
     "import pylab\n",
     "pylab.plot(t, y)\n",
     "pylab.legend([variable.path for variable in model.state_variables])\n",
-    "pylab.show()"
+    "pylab.grid()"
    ]
   },
   {
