added MEDUSA and mizer; use testcase from FABM source dir

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "# Create model (loads fabm.yaml)\n",
-    "model = pyfabm.Model('fabm-gotm-npzd.yaml')\n",
+    "model = pyfabm.Model('../extern/fabm/testcases/fabm-gotm-npzd.yaml')\n",
     "\n",
     "# Configure the environment\n",
     "# Note: the set of environmental dependencies depends on the loaded biogeochemical model.\n",
