use medusa as example

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -42,13 +42,22 @@
    "outputs": [],
    "source": [
     "# Create model (loads fabm.yaml)\n",
-    "model = pyfabm.Model('../extern/fabm/testcases/fabm-gotm-npzd.yaml')\n",
+    "model = pyfabm.Model('../extern/fabm-medusa/testcases/fabm-medusa-original.yaml')\n",
+    "\n",
+    "column_depth = 50\n",
     "\n",
     "# Configure the environment\n",
     "# Note: the set of environmental dependencies depends on the loaded biogeochemical model.\n",
-    "model.cell_thickness = 1.\n",
-    "model.findDependency('surface_downwelling_photosynthetic_radiative_flux').value = 50.\n",
-    "model.findDependency('downwelling_photosynthetic_radiative_flux').value = 25.\n",
+    "model.cell_thickness = column_depth\n",
+    "model.findDependency('temperature').value = 15.\n",
+    "model.findDependency('practical_salinity').value = 35.\n",
+    "model.findDependency('surface_downwelling_shortwave_flux').value = 50.\n",
+    "model.findDependency('density').value = 1020\n",
+    "model.findDependency('cell_thickness').value = column_depth\n",
+    "model.findDependency('depth').value = 0.5 * column_depth\n",
+    "model.findDependency('pressure').value = 0.5 * column_depth\n",
+    "model.findDependency('ice_area_fraction').value = 0\n",
+    "model.findDependency('wind_speed').value = 1.\n",
     "\n",
     "# Verify the model is ready to be used\n",
     "assert model.checkReady(), 'One or more model dependencies have not been fulfilled.'"
@@ -66,7 +75,7 @@
     "    return model.getRates()\n",
     "\n",
     "# Time-integrate over 200 days (note: FABM's internal time unit is seconds!)\n",
-    "t = numpy.linspace(0, 200., 100)\n",
+    "t = numpy.linspace(0, 200., 1000)\n",
     "y = scipy.integrate.odeint(dy, model.state, t*86400)"
    ]
   },
@@ -77,10 +86,13 @@
    "outputs": [],
    "source": [
     "# Plot results\n",
-    "import pylab\n",
-    "pylab.plot(t, y)\n",
-    "pylab.legend([variable.path for variable in model.state_variables])\n",
-    "pylab.grid()"
+    "fig = pyplot.figure()\n",
+    "for i, variable in enumerate(model.state_variables):\n",
+    "    if variable.name in ('pelagic/PHN', 'pelagic/PHD', 'pelagic/ZME', 'pelagic/ZMI'):\n",
+    "        pyplot.plot(t, y[:,i], label=variable.long_name)\n",
+    "pyplot.legend()\n",
+    "pyplot.grid()\n",
+    "pyplot.xlabel('time (d)');"
    ]
   },
   {
