use pyplot.subplots

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -86,13 +86,13 @@
    "outputs": [],
    "source": [
     "# Plot results\n",
-    "fig = pyplot.figure()\n",
+    "fig, ax = pyplot.subplots()\n",
     "for i, variable in enumerate(model.state_variables):\n",
     "    if variable.name in ('pelagic/PHN', 'pelagic/PHD', 'pelagic/ZME', 'pelagic/ZMI'):\n",
-    "        pyplot.plot(t, y[:,i], label=variable.long_name)\n",
-    "pyplot.legend()\n",
-    "pyplot.grid()\n",
-    "pyplot.xlabel('time (d)');"
+    "        ax.plot(t, y[:,i], label=variable.long_name)\n",
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "ax.set_xlabel('time (d)');"
    ]
   },
   {
