added clearance rate plot

--- a/notebooks/2 - model ingredients.ipynb
+++ b/notebooks/2 - model ingredients.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python388jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-   "display_name": "Python 3.8.8 64-bit (virtualenv)"
+   "display_name": "Python 3.8.8 64-bit (conda)"
   }
  },
  "nbformat": 4,
@@ -72,6 +72,46 @@
     "ax.set_xlabel('prey mass (g)')\n",
     "ax.grid()\n",
     "ax.legend();"
+   ]
+  },
+  {
+   "source": [
+    "## Clearance rate"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benoit_blanchard = 640 * w_grid**0.82\n",
+    "acuna = 10.**14.076 * w_grid**0.926 * 1e-3 * 365 * numpy.exp(-0.65 / 8.62e-5 / (273.15 + 13))  # convert from L to m3, from 1/d to 1/yr, apply Arrhenius temperature correction\n",
+    "acuna2 = 91.32 * w_grid**0.776\n",
+    "kiorboe = 10.**7.31 * (0.1 * w_grid)**(1.01) * 1e-6 * 365 * 2.8**-0.2  # convert from ml to m3, from 1/d to 1/yr, apply Q10 temperature correction\n",
+    "\n",
+    "fig, ax = pyplot.subplots()\n",
+    "\n",
+    "ax.loglog(w_grid, benoit_blanchard, '-', label='Benoît et al. 2004, Blanchard et al. 2009')\n",
+    "ax.loglog(w_grid[w_grid<1e4], acuna[w_grid<1e4], '-', label='Acuña et al. 2009')\n",
+    "ax.loglog(w_grid[w_grid<10.], kiorboe[w_grid<10.], '-', label='Kiørboe et al. 2011')\n",
+    "ax.set_xlabel('individual mass (g)')\n",
+    "ax.set_ylabel('clearance rate (m³/yr)')\n",
+    "ax.axhline(365., linestyle='--', color='k', label='1 m³/d')\n",
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "\n",
+    "import csv\n",
+    "ww, clearance = [], []\n",
+    "with open('../datasets/Acuna_et_al_2012_table_S1.dat') as f:\n",
+    "    for name2value in csv.DictReader(f, delimiter='\\t'):\n",
+    "        if name2value['functional type'] in ('SF',):\n",
+    "            temp_corr = numpy.exp(-0.65 / 8.62e-5 * (1./ (273.15 + 13.) - 1./ (273.15 + float(name2value['Temp']))))\n",
+    "            ww.append(float(name2value['WW']))\n",
+    "            clearance.append(float(name2value['Clearance']) * temp_corr * 1e-3 * 365)\n",
+    "ax.loglog(ww, clearance, '.', mec='gray', mfc='w', label='Acuña et al. 2009 Fig2A', zorder=-1);"
    ]
   },
   {
@@ -144,11 +184,12 @@
     "T = numpy.linspace(-2., 30, 1000)\n",
     "tau = numpy.exp(c1 - E_a / k / (T + 273.15))\n",
     "fig, ax = pyplot.subplots()\n",
-    "ax.plot(T, tau, '-', label='Blanchard et al. 2012')\n",
-    "ax.plot(T, 2.**((T - T_ref) / 10.), '-', label='Q10=2')\n",
+    "ax.plot(T, tau, '-', label='Arrhenius with $E_a = 0.63$ (Blanchard et al. 2012)')\n",
+    "ax.plot(T, 2.8**((T - T_ref) / 10.), '--', label='$Q_{10}=2.8$ (Kiørboe 2011, Hansen et al. 1997)')\n",
+    "ax.plot(T, 2.**((T - T_ref) / 10.), '--', label='$Q_{10}=2$')\n",
     "ax.set_xlabel('temperature (degrees Celsius)')\n",
     "ax.set_ylabel('relative rate (-)')\n",
-    "ax.axvline(T_ref, linestyle='--', color='k')\n",
+    "ax.axvline(T_ref, linestyle=':', color='k')\n",
     "ax.legend()\n",
     "ax.grid()"
    ]
