--- a/notebooks/2 - model ingredients.ipynb
+++ b/notebooks/2 - model ingredients.ipynb
@@ -22,6 +22,23 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "This document introduces the ingredients of the community size spectrum model (CSSM)\n",
+    "\n",
+    "Much of this can be found in [the vignette of the R package \"mizer\"](https://mran.microsoft.com/snapshot/2017-02-04/web/packages/mizer/vignettes/mizer_vignette.pdf)\n",
+    "\n",
+    "Other resources:\n",
+    "* [Benoît & Rochet 2004](https://doi.org/10.1016/S0022-5193(03)00290-X)\n",
+    "* [Blanchard et al, 2009](https://doi.org/10.1111/j.1365-2656.2008.01466.x)\n",
+    "* [Hartvig et al, 2011](https://doi.org/10.1016/j.jtbi.2010.12.006)\n",
+    "* [Blanchard et al, 2012](https://doi.org/10.1098/rstb.2012.0231)\n",
+    "* [Scott et al, 2014](https://doi.org/10.1111/2041-210X.12256)\n",
+    "* [Blanchard et al, 2014](https://doi.org/10.1111/1365-2664.12238)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -40,15 +57,24 @@
    "outputs": [],
    "source": [
     "# Set up a grid for wet mass\n",
-    "w_min, w_max = 0.001, 1e6\n",
+    "w_min, w_max = 0.0001, 1e6\n",
     "w_grid = 10.**numpy.linspace(numpy.log10(w_min), numpy.log10(w_max), 1000)"
    ]
   },
   {
    "source": [
-    "## Prey preference [(Scott et al. 2014)](https://doi.org/10.1111/2041-210X.12256)\n",
+    "## Prey preference\n",
+    "\n",
+    "Preference of predator with wet mass $w$ for prey of $w_p$ takes the shape of a lognormal distribution:\n",
+    "\n",
+    "$\\phi(w_p/w) = \\exp\\left[\n",
+    "    \\frac\n",
+    "        {-(\\ln{(\\beta w_p / w)})^2}\n",
+    "        {2\\sigma^2}\n",
+    "    \\right]$\n",
+    "\n",
     "* for a single species: $\\sigma = 1$\n",
-    "* for a community: $\\sigma = 2$ or $\\sigma = \\ln{10} \\approx 2.3$"
+    "* for a community: $\\sigma = 2$ ([Scott et al, 2014](https://doi.org/10.1111/2041-210X.12256)) or $\\sigma = \\ln{10} \\approx 2.3$ ([Blanchard et al, 2012](https://doi.org/10.1098/rstb.2012.0231))"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -60,7 +86,7 @@
    "outputs": [],
    "source": [
     "beta = 100.                        # preferred predator : prey amss ratio\n",
-    "sigmas = [1, 2., numpy.log(10.)]   # standard deviation of sleecivity function (ln g)\n",
+    "sigmas = [1, 2., numpy.log(10.)]   # standard deviation of selectivity function (ln g)\n",
     "w_predator = 100.\n",
     "fig, ax = pyplot.subplots()\n",
     "for sigma in sigmas:\n",
@@ -76,7 +102,14 @@
   },
   {
    "source": [
-    "## Clearance rate"
+    "## Predator-prey encounter\n",
+    "\n",
+    "The clearance rate (m³/yr) describes the volume of water searched for prey per unit time.\n",
+    "It is an allometric function of wet mass: $V=\\gamma w^q$\n",
+    "\n",
+    "Encountered food:\n",
+    "\n",
+    "$E_e = V E_a = V \\int{\\phi(w_p/w)} C(w_p) dw_p$ with $C(w_p)$ the concentration density (m-3) of prey with wet mass $w_p$"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -113,6 +146,29 @@
     "            clearance.append(float(name2value['Clearance']) * temp_corr * 1e-3 * 365)\n",
     "ax.loglog(ww, clearance, '.', mec='gray', mfc='w', label='Acuña et al. 2009 Fig2A', zorder=-1);"
    ]
+  },
+  {
+   "source": [
+    "## Consumption\n",
+    "\n",
+    "Type II functional response with maximum ingestion rate (g/yr) as an allometric function of wet mass: $h w^n$ \n",
+    "\n",
+    "$f = \\frac{E_e}{E_e + h w^n}$\n",
+    "\n",
+    "$I = h w^n f$\n",
+    "\n",
+    "For models without saturation, all encountered food is eaten.\n",
+    "This is implemented by setting $h \\rightarrow \\infty$, which means $I \\rightarrow E_e$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "source": [
@@ -163,7 +219,62 @@
   },
   {
    "source": [
-    "## Temperature dependence introduced by [Blanchard et al. (2012)](https://doi.org/10.1098/rstb.2012.0231)"
+    "## \"Other\" mortality\n",
+    "\n",
+    "### Intrinsic mortality\n",
+    "\n",
+    "\"Mortality from sources other than predation and starvation is assumed to be constant within a species\n",
+    "and inversely proportional to generation time\" (mizer vignette)\n",
+    "\n",
+    "$\\mu_b = \\mu_0 w^{z_0}$\n",
+    "\n",
+    "* $\\mu_0 = 0.2, z_0 = -0.25$ (Blanchard et al. 2009, 2012)\n",
+    "* $\\mu_0 = 0.1, z_0 = n-1=-1/3$ (Scott et al. 2012)\n",
+    "\n",
+    "### Senescent mortality (Blanchard et al. 2009, 2012 only)\n",
+    "\n",
+    "\"Although we have no data to support such a functional form, it seems intuitively obvious that it must occur at the limit in unexploited fish populations to prevent the buildup of very large fish\" ([Hall et al, 2006](https://doi.org/10.1139/f06-039))\n",
+    "\n",
+    "$\\mu_s = 0.2 (w/w_s)^{z_s}$ with $z_s=0.3$ and $w_s$ = 1 kg"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = pyplot.subplots()\n",
+    "\n",
+    "mu_0 = 0.2\n",
+    "z0exp = -0.25\n",
+    "mu_b = mu_0 * w_grid**z0exp\n",
+    "\n",
+    "z_spre = 0.2 # Blanchard et al. 2009, 2012\n",
+    "w_s = 1000.\n",
+    "z_s = 0.3\n",
+    "mu_s = z_spre * (w_grid / w_s)**z_s\n",
+    "\n",
+    "ax.semilogx(w_grid, mu_b, label='intrinsic mortality $\\mu_b$')\n",
+    "ax.semilogx(w_grid, mu_s, label='senescent mortality $\\mu_s$')\n",
+    "ax.semilogx(w_grid, mu_b + mu_s, '--k', label='combined')\n",
+    "ax.set_xlabel('wet mass (g)')\n",
+    "ax.set_ylabel('mortality (1/yr)')\n",
+    "ax.grid()\n",
+    "ax.legend();"
+   ]
+  },
+  {
+   "source": [
+    "## Temperature dependence\n",
+    "\n",
+    "[Blanchard et al. (2012)](https://doi.org/10.1098/rstb.2012.0231) apply an Arrhenius relationship to all rates:\n",
+    "\n",
+    "$\\exp \\left[ c1 - E_a / (k (T + 273.15)) \\right]$\n",
+    "\n",
+    "Here, $E_a$ = 0.63 eV is the activation energy, $k$ the Boltzmann constant ($8.62 \\times 10^{-5}$ eV/K), and $T$ the temperature in °C. $c1=25.55$ represents $E_a / (k (T + 273.15)$ for a reference temperature, which can be constructed to have been 13°C."
    ],
    "cell_type": "markdown",
    "metadata": {}
