expanded dynamic simulation

--- a/notebooks/4 - dynamic simulation.ipynb
+++ b/notebooks/4 - dynamic simulation.ipynb
@@ -31,12 +31,31 @@
     "import scipy.stats\n",
     "%matplotlib widget\n",
     "from matplotlib import pyplot\n",
+    "from matplotlib.dates import num2date, date2num\n",
     "import netCDF4\n",
+    "from ipywidgets import widgets\n",
     "\n",
     "import sys\n",
     "sys.path.append('../extern/fabm-mizer/python')\n",
-    "import mizer"
+    "import mizer\n",
+    "\n",
+    "# Function for converting from Equivalent Spherical Diameter (micrometer) to wet mass in g\n",
+    "def esd2mass(d): # d: equivalent spherical diameter in micrometer\n",
+    "    V = 4./3. * numpy.pi * (numpy.array(d) / 2e6)**3  # V: volume in m3\n",
+    "    return V * 1e6  # mass in g approximately equals volume in m3 multiplied by 1e6 (assumes density of 1000 kg/m3)"
    ]
+  },
+  {
+   "source": [
+    "## NEMO-MEDUSA outputs for the Agulhas bank\n",
+    "\n",
+    "* Extracted from 1/12° hindcast (1990 - 2015) on JASMIN\n",
+    "* 33.8 - 37 °South, 20 - 27 °East, < 200 m water depth\n",
+    "* Weighted depth average per grid point, weights proportional to total plankton concentration\n",
+    "* Then horizontally averaged"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -44,6 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Read NetCDF\n",
     "path = r'../datasets/NEMO-MEDUSA-Agulhas.nc'\n",
     "with netCDF4.Dataset(path) as nc:\n",
     "    print('%s contains: %s' % (path, ', '.join(nc.variables.keys())))\n",
@@ -63,6 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot\n",
     "fig, (ax1, ax2, ax3) = pyplot.subplots(nrows=3, figsize=(12,8), sharex=True)\n",
     "ax1.plot(time, temp)\n",
     "ax1.grid()\n",
@@ -81,6 +102,56 @@
     "ax3.set_xlabel('time')\n",
     "ax3.legend();"
    ]
+  },
+  {
+   "source": [
+    "## Does the MEDUSA plankton community resemble a Sheldon size spectrum?"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# From ESD (um) to individual wet mass (g)\n",
+    "w_esd2, w_esd20, w_esd200 = esd2mass([2., 20., 200.])\n",
+    "print('Wet mass for cells of ESD =   2 µm: %.3g g' % w_esd2)\n",
+    "print('Wet mass for cells of ESD =  20 µm: %.3g g' % w_esd20)\n",
+    "print('Wet mass for cells of ESD = 200 µm: %.3g g' % w_esd200)\n",
+    "\n",
+    "# Map MEDUSA PFTs to size classes\n",
+    "bins = [\n",
+    "    (PHN,       w_esd2,  w_esd20),\n",
+    "    (PHD + ZMI, w_esd20, w_esd200),\n",
+    "    (ZME,       1e-5,    1e-3),\n",
+    "]\n",
+    "\n",
+    "# Key metrics per size bin\n",
+    "left = [l for c, l, r in bins]\n",
+    "width = [r - l for c, l, r in bins]\n",
+    "values = [c.mean() / (numpy.log10(r) - numpy.log10(l)) for c, l, r in bins]\n",
+    "sd = [c.std() / (numpy.log10(r) - numpy.log10(l)) for c, l, r in bins]\n",
+    "\n",
+    "# Create plot\n",
+    "fig, ax = pyplot.subplots()\n",
+    "ax.bar(left, values, width=width, align='edge', ec='k')\n",
+    "ax.errorbar([numpy.sqrt(l*r) for c, l, r in bins], values, yerr=sd, fmt='none', ecolor='k', capsize=5)\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_ylabel('concentration (mmol N/m³) per bin width in log space')\n",
+    "ax.set_xlabel('individual wet mass (g)')\n",
+    "ax.set_title('long-term average of PFT concentration per size class')\n",
+    "ax.grid()"
+   ]
+  },
+  {
+   "source": [
+    "## Configure the size spectrum model"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -119,11 +190,6 @@
     "    'F': 0.4 #4 #8  # note: need to put double the intended value due to fisheries equation!\n",
     "}\n",
     "\n",
-    "# Function for converting from Equivalent Spherical Diameter (micrometer) to wet mass in g\n",
-    "def esd2mass(d): # d: equivalent spherical diameter in micrometer\n",
-    "    V = 4./3. * numpy.pi * (numpy.array(d) / 2e6)**3  # V: volume in m3\n",
-    "    return V*1e6  # mass in g approximately equals volume in m3 multiplied by 1e6 (assumes density of 1000 kg/m3)\n",
-    "\n",
     "w_esd2, w_esd20, w_esd200 = esd2mass([2., 20., 200.])\n",
     "\n",
     "scale_factor = 10 * 0.001 * 12 * 106. / 16. # 10 g wet mass/g carbon * 0.001 g C/mg C * 12 mg C/mmol C * 106/16 mmol C/mmol N\n",
@@ -148,14 +214,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Time-integrate\n",
-    "result = m.run(temp.times, spinup=50, verbose=True, save_spinup=False, save_loss_rates=True, save_f=True)"
-   ]
+    "## Time integrate"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -163,10 +226,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import widgets\n",
-    "def show_spectrum(day):\n",
-    "    result.plot_spectrum(day, normalization=0, global_range=True)\n",
-    "slider = widgets.interact(show_spectrum, day=(0, len(result.t)-1))"
+    "result = m.run(temp.times, spinup=50, verbose=True, save_spinup=False, save_loss_rates=True, save_f=True)"
+   ]
+  },
+  {
+   "source": [
+    "## Plot results"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "itime = 0\n",
+    "normalization = 1\n",
+    "fig, ax = pyplot.subplots()\n",
+    "\n",
+    "prey_masses = m.prey.masses\n",
+    "log_prey_masses = numpy.log10(prey_masses)\n",
+    "dprey = log_prey_masses[1] - log_prey_masses[0]\n",
+    "prey_bin_width = 10.**(log_prey_masses + 0.5 * dprey) - 10.**(log_prey_masses - 0.5 * dprey)\n",
+    "\n",
+    "log_bin_masses = numpy.log10(m.bin_masses)\n",
+    "dbin = log_bin_masses[1] - log_bin_masses[0]\n",
+    "bin_width = 10.**(log_bin_masses + 0.5 * dbin) - 10.**(log_bin_masses - 0.5 * dbin)\n",
+    "\n",
+    "prey_masses, prey_values, lines = None, None, []\n",
+    "if normalization == 0:\n",
+    "    values = result.spectrum\n",
+    "    ax.set_ylabel('wet mass (g)')\n",
+    "    prey_masses = m.prey.masses\n",
+    "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / s\n",
+    "elif normalization == 1:\n",
+    "    values = result.biomass_density * m.bin_masses\n",
+    "    ax.set_ylabel('wet mass density (g/g)')\n",
+    "    prey_masses = m.prey.masses\n",
+    "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / prey_bin_width[numpy.newaxis, :] * prey_masses\n",
+    "elif normalization == 2:\n",
+    "    values = result.abundance_density\n",
+    "    ax.set_ylabel('abundance density (#/g)')\n",
+    "minval, maxval = values.min(), values.max()\n",
+    "if prey_masses is not None:\n",
+    "    prey_min = prey_values.min()\n",
+    "    if prey_min > 0:\n",
+    "        minval = min(minval, prey_min)\n",
+    "    maxval = max(maxval, prey_values.max())\n",
+    "ax.set_ylim(minval/10, maxval*10)\n",
+    "if prey_masses is not None:\n",
+    "    line, = ax.loglog(prey_masses, prey_values[itime, :], '.')\n",
+    "    lines.append(line)\n",
+    "line, = ax.loglog(m.bin_masses, values[itime, :], style)\n",
+    "lines.append(line)\n",
+    "ax.grid(True)\n",
+    "ax.set_xlabel('wet mass (g)')\n",
+    "title = ax.set_title(num2date(result.t[itime]).strftime('%Y-%m-%d'))\n",
+    "\n",
+    "def update_spectrum(itime):\n",
+    "    lines[0].set_ydata(prey_values[itime, :])\n",
+    "    lines[1].set_ydata(values[itime, :])\n",
+    "    title.set_text(num2date(result.t[itime]).strftime('%Y-%m-%d'))\n",
+    "slider = widgets.interact(update_spectrum, itime=(0, len(result.t)-1))"
    ]
   },
   {
