cleaned up ingredients

--- a/notebooks/2 - model ingredients.ipynb
+++ b/notebooks/2 - model ingredients.ipynb
@@ -23,6 +23,8 @@
  "cells": [
   {
    "source": [
+    "# Ingredients of size spectrum models\n",
+    "\n",
     "This document introduces the ingredients of the community size spectrum model (CSSM)\n",
     "\n",
     "Much of this can be found in [the vignette of the R package \"mizer\"](https://mran.microsoft.com/snapshot/2017-02-04/web/packages/mizer/vignettes/mizer_vignette.pdf)\n",
@@ -63,16 +65,13 @@
   },
   {
    "source": [
-    "## Prey preference\n",
+    "## Size-based prey preference\n",
     "\n",
-    "Preference of predator with wet mass $w$ for prey of $w_p$ takes the shape of a lognormal distribution:\n",
+    "The preference of a predator with wet mass $w$ for prey of $w_p$ takes the shape of a lognormal distribution:\n",
     "\n",
-    "$\\phi(w_p/w) = \\exp\\left[\n",
-    "    \\frac\n",
-    "        {-(\\ln{(\\beta w_p / w)})^2}\n",
-    "        {2\\sigma^2}\n",
-    "    \\right]$\n",
+    "$$\\phi(w_p/w) = \\exp\\left[\\frac{-(\\ln{(\\beta w_p / w)})^2}{2\\sigma^2}\\right]$$\n",
     "\n",
+    "The optimal predator : prey mass ratio $\\beta$ is 100 in all studies referenced above, but the width of the distribution varies:\n",
     "* for a single species: $\\sigma = 1$\n",
     "* for a community: $\\sigma = 2$ ([Scott et al, 2014](https://doi.org/10.1111/2041-210X.12256)) or $\\sigma = \\ln{10} \\approx 2.3$ ([Blanchard et al, 2012](https://doi.org/10.1098/rstb.2012.0231))"
    ],
@@ -102,14 +101,13 @@
   },
   {
    "source": [
-    "## Predator-prey encounter\n",
+    "## Predator-prey encounter and clearance rate\n",
     "\n",
-    "The clearance rate (m³/yr) describes the volume of water searched for prey per unit time.\n",
-    "It is an allometric function of wet mass: $V=\\gamma w^q$\n",
+    "Available food (g/m³) is essentially the sum of all available prey, weighted by preference. With prey expressed as biomass density (concentration per unit individual mass), that sum becomes an integral over individual prey mass:\n",
     "\n",
-    "Encountered food:\n",
+    "$$E_a = \\int{\\phi(w_p/w)} C(w_p) dw_p$$ with $C(w_p)$ the concentration density (m-3) of prey with wet mass $w_p$\n",
     "\n",
-    "$E_e = V E_a = V \\int{\\phi(w_p/w)} C(w_p) dw_p$ with $C(w_p)$ the concentration density (m-3) of prey with wet mass $w_p$"
+    "Encountered food $E_e$ is the product rate of available food $E_a$ and the clearance rate $V$ (m³/yr). This rate describes the volume of water searched for prey per unit time. It is an allometric function of wet mass: $V=\\gamma w^q$."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -153,9 +151,9 @@
     "\n",
     "Type II functional response with maximum ingestion rate (g/yr) as an allometric function of wet mass: $h w^n$ \n",
     "\n",
-    "$f = \\frac{E_e}{E_e + h w^n}$\n",
+    "$$f = \\frac{E_e}{E_e + h w^n}$$\n",
     "\n",
-    "$I = h w^n f$\n",
+    "$$I = h w^n f$$\n",
     "\n",
     "For models without saturation, all encountered food is eaten.\n",
     "This is implemented by setting $h \\rightarrow \\infty$, which means $I \\rightarrow E_e$"
@@ -226,7 +224,7 @@
     "\"Mortality from sources other than predation and starvation is assumed to be constant within a species\n",
     "and inversely proportional to generation time\" (mizer vignette)\n",
     "\n",
-    "$\\mu_b = \\mu_0 w^{z_0}$\n",
+    "$$\\mu_b = \\mu_0 w^{z_0}$$\n",
     "\n",
     "* $\\mu_0 = 0.2, z_0 = -0.25$ (Blanchard et al. 2009, 2012)\n",
     "* $\\mu_0 = 0.1, z_0 = n-1=-1/3$ (Scott et al. 2012)\n",
@@ -235,7 +233,7 @@
     "\n",
     "\"Although we have no data to support such a functional form, it seems intuitively obvious that it must occur at the limit in unexploited fish populations to prevent the buildup of very large fish\" ([Hall et al, 2006](https://doi.org/10.1139/f06-039))\n",
     "\n",
-    "$\\mu_s = 0.2 (w/w_s)^{z_s}$ with $z_s=0.3$ and $w_s$ = 1 kg"
+    "$$\\mu_s = 0.2 (w/w_s)^{z_s}$$ with $z_s=0.3$ and $w_s$ = 1 kg"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -272,9 +270,13 @@
     "\n",
     "[Blanchard et al. (2012)](https://doi.org/10.1098/rstb.2012.0231) apply an Arrhenius relationship to all rates:\n",
     "\n",
-    "$\\exp \\left[ c1 - E_a / (k (T + 273.15)) \\right]$\n",
+    "$$\\exp \\left[ c1 - \\frac{E_a}{k (T + 273.15)} \\right]$$\n",
     "\n",
-    "Here, $E_a$ = 0.63 eV is the activation energy, $k$ the Boltzmann constant ($8.62 \\times 10^{-5}$ eV/K), and $T$ the temperature in °C. $c1=25.55$ represents $E_a / (k (T + 273.15)$ for a reference temperature, which can be constructed to have been 13°C."
+    "* $E_a$ = 0.63 eV is the activation energy\n",
+    "* $k$ the Boltzmann constant ($8.62 \\times 10^{-5}$ eV/K)\n",
+    "* $T$ the temperature in °C\n",
+    "\n",
+    "$c1=25.55$ represents $E_a / (k (T + 273.15)$ for a reference temperature, which can be reconstructed to have been 13°C."
    ],
    "cell_type": "markdown",
    "metadata": {}
