tweaked spectrum plot

--- a/notebooks/4 - dynamic simulation.ipynb
+++ b/notebooks/4 - dynamic simulation.ipynb
@@ -242,12 +242,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "itime = 0\n",
-    "normalization = 1\n",
-    "fig, ax = pyplot.subplots()\n",
+    "normalization = 2   # 0: Sheldon spectrum (biomass per bin), 1: biomass density, 2: abundance density\n",
     "\n",
-    "prey_masses = m.prey.masses\n",
-    "log_prey_masses = numpy.log10(prey_masses)\n",
+    "log_prey_masses = numpy.log10(m.prey.masses)\n",
     "dprey = log_prey_masses[1] - log_prey_masses[0]\n",
     "prey_bin_width = 10.**(log_prey_masses + 0.5 * dprey) - 10.**(log_prey_masses - 0.5 * dprey)\n",
     "\n",
@@ -255,41 +252,40 @@
     "dbin = log_bin_masses[1] - log_bin_masses[0]\n",
     "bin_width = 10.**(log_bin_masses + 0.5 * dbin) - 10.**(log_bin_masses - 0.5 * dbin)\n",
     "\n",
-    "prey_masses, prey_values, lines = None, None, []\n",
+    "fig, ax = pyplot.subplots()\n",
+    "\n",
     "if normalization == 0:\n",
-    "    values = result.spectrum\n",
-    "    ax.set_ylabel('wet mass (g)')\n",
-    "    prey_masses = m.prey.masses\n",
-    "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / s\n",
+    "    values = result.spectrum / dbin\n",
+    "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / dprey\n",
+    "    ax.set_ylabel('wet mass (g) per log10 bin width')\n",
     "elif normalization == 1:\n",
-    "    values = result.biomass_density * m.bin_masses\n",
+    "    values = result.spectrum / bin_width\n",
+    "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / prey_bin_width\n",
     "    ax.set_ylabel('wet mass density (g/g)')\n",
-    "    prey_masses = m.prey.masses\n",
-    "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / prey_bin_width[numpy.newaxis, :] * prey_masses\n",
     "elif normalization == 2:\n",
-    "    values = result.abundance_density\n",
+    "    values = result.spectrum / bin_width / m.bin_masses\n",
+    "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / prey_bin_width / m.prey.masses\n",
     "    ax.set_ylabel('abundance density (#/g)')\n",
-    "minval, maxval = values.min(), values.max()\n",
-    "if prey_masses is not None:\n",
-    "    prey_min = prey_values.min()\n",
-    "    if prey_min > 0:\n",
-    "        minval = min(minval, prey_min)\n",
-    "    maxval = max(maxval, prey_values.max())\n",
-    "ax.set_ylim(minval/10, maxval*10)\n",
-    "if prey_masses is not None:\n",
-    "    line, = ax.loglog(prey_masses, prey_values[itime, :], '.')\n",
-    "    lines.append(line)\n",
-    "line, = ax.loglog(m.bin_masses, values[itime, :], style)\n",
-    "lines.append(line)\n",
+    "\n",
+    "# Determine suitable y axis range for entire time period\n",
+    "minval, prey_min = values.min(), prey_values.min()\n",
+    "if prey_min > 0: minval = min(minval, prey_min)\n",
+    "maxval = max(values.max(), prey_values.max())\n",
+    "ax.set_ylim(minval / 10, maxval * 10)\n",
+    "\n",
+    "# Plot spectrum\n",
+    "prey_line, = ax.loglog(m.prey.masses, prey_values[0, :], '.')\n",
+    "line, = ax.loglog(m.bin_masses, values[0, :], '.')\n",
     "ax.grid(True)\n",
     "ax.set_xlabel('wet mass (g)')\n",
-    "title = ax.set_title(num2date(result.t[itime]).strftime('%Y-%m-%d'))\n",
+    "title = ax.set_title(num2date(result.t[0]).strftime('%Y-%m-%d'))\n",
     "\n",
-    "def update_spectrum(itime):\n",
-    "    lines[0].set_ydata(prey_values[itime, :])\n",
-    "    lines[1].set_ydata(values[itime, :])\n",
+    "# Allow for chnaging the time step with a slider\n",
+    "def update_spectrum(itime=0):\n",
+    "    prey_line.set_ydata(prey_values[itime, :])\n",
+    "    line.set_ydata(values[itime, :])\n",
     "    title.set_text(num2date(result.t[itime]).strftime('%Y-%m-%d'))\n",
-    "slider = widgets.interact(update_spectrum, itime=(0, len(result.t)-1))"
+    "slider = widgets.interact(update_spectrum, itime=(0, len(result.t) - 1))"
    ]
   },
   {
