--- a/notebooks/4 - dynamic simulation.ipynb
+++ b/notebooks/4 - dynamic simulation.ipynb
@@ -242,15 +242,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalization = 2   # 0: Sheldon spectrum (biomass per bin), 1: biomass density, 2: abundance density\n",
+    "normalization = 0   # 0: Sheldon spectrum (biomass per bin), 1: biomass density, 2: abundance density\n",
     "\n",
-    "log_prey_masses = numpy.log10(m.prey.masses)\n",
-    "dprey = log_prey_masses[1] - log_prey_masses[0]\n",
-    "prey_bin_width = 10.**(log_prey_masses + 0.5 * dprey) - 10.**(log_prey_masses - 0.5 * dprey)\n",
-    "\n",
+    "# Characteristics of bins of the predator psectrum\n",
     "log_bin_masses = numpy.log10(m.bin_masses)\n",
     "dbin = log_bin_masses[1] - log_bin_masses[0]\n",
     "bin_width = 10.**(log_bin_masses + 0.5 * dbin) - 10.**(log_bin_masses - 0.5 * dbin)\n",
+    "\n",
+    "# Characteristics of bins of the prey psectrum\n",
+    "log_prey_masses = numpy.log10(m.prey.masses)\n",
+    "dprey = log_prey_masses[1] - log_prey_masses[0]\n",
+    "prey_bin_width = 10.**(log_prey_masses + 0.5 * dprey) - 10.**(log_prey_masses - 0.5 * dprey)\n",
     "\n",
     "fig, ax = pyplot.subplots()\n",
     "\n",
