use real time for idealized simulations

--- a/notebooks/3 - idealized solutions.ipynb
+++ b/notebooks/3 - idealized solutions.ipynb
@@ -27,6 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
+    "import sys\n",
+    "\n",
     "import numpy\n",
     "import scipy.stats\n",
     "%matplotlib widget\n",
@@ -35,7 +38,6 @@
     "import netCDF4\n",
     "from ipywidgets import widgets\n",
     "\n",
-    "import sys\n",
     "sys.path.append('../extern/fabm-mizer/python')\n",
     "import mizer"
    ]
@@ -90,7 +92,9 @@
     "    m = mizer.Mizer(prey=prey_collection, parameters=parameters, temperature=13., depth=50., recruitment_from_prey=2, verbose=False)\n",
     "\n",
     "    # time integrate\n",
-    "    time = numpy.arange(nday)\n",
+    "    start = datetime.datetime(2000, 1, 1)\n",
+    "    stop = start + datetime.timedelta(days=nday)\n",
+    "    time = numpy.arange(date2num(start), date2num(stop))\n",
     "    return m.run(time, spinup=0, verbose=verbose, save_spinup=False, save_loss_rates=True, save_f=True, dt=1.)\n",
     "\n",
     "def run_and_plot(ax, label=None, *args, **kwargs):\n",
