updated dynamic simulation

--- a/notebooks/4 - dynamic simulation.ipynb
+++ b/notebooks/4 - dynamic simulation.ipynb
@@ -210,7 +210,7 @@
     "depth = mizer.datasources.TimeSeries(path, 'bm_int**2/bm2_int', x=0, y=0, time_name='time_counter', allow_mask=True)\n",
     "\n",
     "# create mizer model\n",
-    "m = mizer.Mizer(prey=prey_collection, parameters=parameters, temperature=temp, depth=depth, recruitment_from_prey=2)"
+    "m = mizer.Mizer(prey=prey_collection, parameters=parameters, temperature=temp, depth=depth, recruitment_from_prey=2, verbose=False)"
    ]
   },
   {
@@ -226,6 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note: the model is spun up for several years (spinup argument below).\n",
+    "# During this spinup it is forced with the time average of all forcing fields (no seasonal cycle!)\n",
     "result = m.run(temp.times, spinup=50, verbose=True, save_spinup=False, save_loss_rates=True, save_f=True)"
    ]
   },
@@ -257,14 +259,17 @@
     "fig, ax = pyplot.subplots()\n",
     "\n",
     "if normalization == 0:\n",
+    "    # Sheldon-type spectrum (expected slope = 0)\n",
     "    values = result.spectrum / dbin\n",
     "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / dprey\n",
-    "    ax.set_ylabel('wet mass (g) per log10 bin width')\n",
+    "    ax.set_ylabel('wet mass (g) per log10 individual size')\n",
     "elif normalization == 1:\n",
+    "    # biomass density (expected slope = -1)\n",
     "    values = result.spectrum / bin_width\n",
     "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / prey_bin_width\n",
     "    ax.set_ylabel('wet mass density (g/g)')\n",
     "elif normalization == 2:\n",
+    "    # abundance density (expected slope = -2)\n",
     "    values = result.spectrum / bin_width / m.bin_masses\n",
     "    prey_values = result.y[:, m.prey_indices] * result.depth[:, numpy.newaxis] / prey_bin_width / m.prey.masses\n",
     "    ax.set_ylabel('abundance density (#/g)')\n",
@@ -277,29 +282,25 @@
     "\n",
     "# Plot spectrum\n",
     "prey_line, = ax.loglog(m.prey.masses, prey_values[0, :], '.')\n",
-    "line, = ax.loglog(m.bin_masses, values[0, :], '.')\n",
+    "predator_line, = ax.loglog(m.bin_masses, values[0, :], '.')\n",
     "ax.grid(True)\n",
     "ax.set_xlabel('wet mass (g)')\n",
     "title = ax.set_title(num2date(result.t[0]).strftime('%Y-%m-%d'))\n",
     "\n",
-    "# Allow for chnaging the time step with a slider\n",
+    "# Allow for changing the time step with a slider\n",
     "def update_spectrum(itime=0):\n",
     "    prey_line.set_ydata(prey_values[itime, :])\n",
-    "    line.set_ydata(values[itime, :])\n",
+    "    predator_line.set_ydata(values[itime, :])\n",
     "    title.set_text(num2date(result.t[itime]).strftime('%Y-%m-%d'))\n",
     "slider = widgets.interact(update_spectrum, itime=(0, len(result.t) - 1))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "result.plot_biomass_timeseries()\n",
-    "result.plot_timeseries('landings')\n",
-    "result.plot_annual_mean('landings', plot_change=True)"
-   ]
+    "## Total biomass"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -307,8 +308,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anim = result.animate_spectrum(normalization=0)"
+    "result.plot_biomass_timeseries()"
    ]
+  },
+  {
+   "source": [
+    "## Landings\n",
+    "\n",
+    "Remember: our fisheries parameterisation is embarassingly primitive!"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result.plot_timeseries('landings')\n",
+    "result.plot_annual_mean('landings', plot_change=True)"
+   ]
+  },
+  {
+   "source": [
+    "## The \"large fish index\"\n",
+    "\n",
+    "The LFI describes the fraction of biomass in the fish community that is present is fish larger than \"some threshold\".\n",
+    "\n",
+    "It is a commonly used metric to assess Good Environmental Status, or to summarize changes in the fish community under scenarios describing changes in fisheries pressure and/or climate.\n",
+    "\n",
+    "Caveat: a \"large fish\" is typically defined in terms of length. We need to convert that to wet mass to retrieve the LFI from our results."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Lmin_lfi = 40.        # minimum length (cm) for a \"large fish\" based on Greenstreet et al., 2011 (https://doi.org/10.1093/icesjms/fsq156)\n",
+    "a, b = 0.0076, 2.96   # allometric coefficients to convert length into weight (Garcia et al. subm, based on https://www.cefas.co.uk/publications/techrep/TechRep150.pdf)\n",
+    "wmin_lfi = a * Lmin_lfi**b\n",
+    "lfi = result.get_lfi_timeseries(wmin_lfi)\n",
+    "fig, ax = pyplot.subplots()\n",
+    "ax.plot_date(result.t, lfi, '-')\n",
+    "ax.set_ylabel('fraction of fish > %.1f g' % wmin_lfi)\n",
+    "ax.grid()"
+   ]
+  },
+  {
+   "source": [
+    "## Mortality rates"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Saving results"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save results in NetCDF format\n",
+    "result.save_as_nc('result.nc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
