--- a/notebooks/2 - model ingredients.ipynb
+++ b/notebooks/2 - model ingredients.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python388jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-   "display_name": "Python 3.8.8 64-bit (conda)"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
@@ -107,7 +107,11 @@
     "\n",
     "$$E_a = \\int{\\phi(w_p/w)} C(w_p) dw_p$$ with $C(w_p)$ the concentration density (m-3) of prey with wet mass $w_p$\n",
     "\n",
-    "Encountered food $E_e$ is the product rate of available food $E_a$ and the clearance rate $V$ (m³/yr). This rate describes the volume of water searched for prey per unit time. It is an allometric function of wet mass: $V=\\gamma w^q$."
+    "Encountered food (g/individual predator/yr) is the product rate of available food and the clearance rate $V$ (m³/yr):\n",
+    "\n",
+    "$$E_e = V E_a$$$\n",
+    "\n",
+    "This rate describes the volume of water searched for prey per unit time. It is an allometric function of wet mass: $V=\\gamma w^q$."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -120,7 +124,6 @@
    "source": [
     "benoit_blanchard = 640 * w_grid**0.82\n",
     "acuna = 10.**14.076 * w_grid**0.926 * 1e-3 * 365 * numpy.exp(-0.65 / 8.62e-5 / (273.15 + 13))  # convert from L to m3, from 1/d to 1/yr, apply Arrhenius temperature correction\n",
-    "acuna2 = 91.32 * w_grid**0.776\n",
     "kiorboe = 10.**7.31 * (0.1 * w_grid)**(1.01) * 1e-6 * 365 * 2.8**-0.2  # convert from ml to m3, from 1/d to 1/yr, apply Q10 temperature correction\n",
     "\n",
     "fig, ax = pyplot.subplots()\n",
@@ -147,16 +150,21 @@
   },
   {
    "source": [
-    "## Consumption\n",
+    "## Ingestion\n",
     "\n",
-    "Type II functional response with maximum ingestion rate (g/yr) as an allometric function of wet mass: $h w^n$ \n",
+    "By default, ingestion is described with Type II (\"Michaelis-Menten\") functional response. Its maximum rate (g/yr) is yet again an allometric function of wet mass: $h w^n$. The value of the functional response (0-1), or \"food level\", equals:\n",
     "\n",
     "$$f = \\frac{E_e}{E_e + h w^n}$$\n",
     "\n",
+    "This is thought to lie around 0.6 in natural systems (Hartvig et al. 2011).\n",
+    "\n",
+    "Actual ingestion is the product of th maximum ingestion rate and the food level:\n",
+    "\n",
     "$$I = h w^n f$$\n",
     "\n",
-    "For models without saturation, all encountered food is eaten.\n",
-    "This is implemented by setting $h \\rightarrow \\infty$, which means $I \\rightarrow E_e$"
+    "For models without saturation (Blanchard et al. 2009), all encountered food is eaten.\n",
+    "In our implementation, this is achieved by setting $h \\rightarrow \\infty$, which means $I \\rightarrow E_e$.\n",
+    "In practice we substitute a \"large number\" (1e9) for $\\infty$."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -166,7 +174,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Scott et al. 2014 parameterisation for community model\n",
+    "h = 10.    # maximum ingestion rate (g/yr) for individual of 1 g\n",
+    "n = 2./3.  # allometric scaling of maximum ingestion rate\n",
+    "\n",
+    "# Disable saturation altogether to replicate Blanchard et al. 2009 (I -> E_e)\n",
+    "h = 1e9    # maximum ingestion rate (g/yr) for individual of 1 g\n",
+    "\n",
+    "fig, ax = pyplot.subplots()\n",
+    "E_a = numpy.linspace(0, 20., 1000)\n",
+    "for w in (0.001, 1., 100., 10000):\n",
+    "    V = 10.**14.076 * w**0.926 * 1e-3 * 365 * numpy.exp(-0.65 / 8.62e-5 / (273.15 + 13))\n",
+    "    E_e = V * E_a\n",
+    "    I_max = h * w**n\n",
+    "    f = E_e / (E_e + I_max)\n",
+    "    I = I_max / w * f\n",
+    "    ax.plot(E_a, I, '-', label='predator of %s g' % w)\n",
+    "ax.legend()\n",
+    "ax.grid()\n",
+    "ax.set_xlabel('available prey (g/m³)')\n",
+    "ax.set_ylabel('specific ingestion (g prey/g predator/yr)');"
+   ]
+  },
+  {
+   "source": [
+    "## Growth\n",
+    "\n",
+    "In Blanchard et al. (2009) growth is a fixed fraction of ingested biomass.\n",
+    "That fraction is the Gross Growth Conversion efficiency, $\\alpha$. As it encapsulates all metabolic losses including respiration,\n",
+    "its value is low (0.2)\n",
+    "\n",
+    "NB In species-specific (and trait-based) size spectrum models, there is an additional \"standard metabolism\" term that is independent of ingestion.\n",
+    "In that case, $\\alpha$ is the assimilation efficiency that takes higher values (0.6)."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -186,17 +229,12 @@
    "source": [
     "fig, (ax1, ax2, ax3) = pyplot.subplots(ncols=3, figsize=(12,5))\n",
     "\n",
-    "# Linear\n",
-    "f = 0.09 * numpy.log10(w_grid) + 0.04; f[w_grid < 10.] = 0\n",
-    "ax1.semilogx(w_grid, f,'-')\n",
-    "ax1.set_title('linear')\n",
-    "\n",
     "# Knife-edge\n",
     "f1 = numpy.full_like(w_grid, 0.8); f1[w_grid < 1.25] = 0\n",
     "f2 = numpy.full_like(w_grid, 0.2); f2[w_grid < 1.25] = 0\n",
-    "ax2.semilogx(w_grid, f1,'-')\n",
-    "ax2.semilogx(w_grid, f2,'--')\n",
-    "ax2.set_title('knife-edge')\n",
+    "ax1.semilogx(w_grid, f1,'-')\n",
+    "ax1.semilogx(w_grid, f2,'--')\n",
+    "ax1.set_title('knife-edge (fishing_type=1)')\n",
     "\n",
     "# Sigmoid\n",
     "w25 = numpy.log(10.)   # wet mass where fishing pressure is 25% of maximum\n",
@@ -204,8 +242,13 @@
     "S2 = numpy.log(3)/(w50-w25)\n",
     "S1 = S2 * w50\n",
     "f = 0.8 * 1. / (1. + numpy.exp(S1 - S2 * numpy.log(w_grid)))\n",
-    "ax3.semilogx(w_grid, f, '-')\n",
-    "ax3.set_title('sigmoid')\n",
+    "ax2.semilogx(w_grid, f, '-')\n",
+    "ax2.set_title('sigmoid (fishing_type=2)')\n",
+    "\n",
+    "# Linear\n",
+    "f = 0.09 * numpy.log10(w_grid) + 0.04; f[w_grid < 10.] = 0\n",
+    "ax3.semilogx(w_grid, f,'-')\n",
+    "ax3.set_title('linear (fishing_type=3)')\n",
     "\n",
     "ax1.set_ylabel('fisheries mortality (1/yr)')\n",
     "for ax in (ax1, ax2, ax3):\n",
@@ -292,10 +335,10 @@
     "E_a = 0.63   # activation energy (eV)\n",
     "T_ref = 13.  # reference temperature\n",
     "k = 8.62e-5  # Boltzmann constant (eV K-1)\n",
-    "c1 = E_a / k / (T_ref + 273.15) # minus natural log of scale factor at reference temperature (equal to c1 in Blanchard et al.)\n",
+    "c1 = E_a / k / (T_ref + 273.) # minus natural log of scale factor at reference temperature (equal to c1 in Blanchard et al.)\n",
     "print('c1 = %.2f (cf. Blanchard et al. 2012)' % c1)\n",
     "T = numpy.linspace(-2., 30, 1000)\n",
-    "tau = numpy.exp(c1 - E_a / k / (T + 273.15))\n",
+    "tau = numpy.exp(c1 - E_a / k / (T + 273.))\n",
     "fig, ax = pyplot.subplots()\n",
     "ax.plot(T, tau, '-', label='Arrhenius with $E_a = 0.63$ (Blanchard et al. 2012)')\n",
     "ax.plot(T, 2.8**((T - T_ref) / 10.), '--', label='$Q_{10}=2.8$ (Kiørboe 2011, Hansen et al. 1997)')\n",
