--- a/notebooks/1 - size spectra.ipynb
+++ b/notebooks/1 - size spectra.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python388jvsc74a57bd097ae724bfa85b9b34df7982b8bb8c7216f435b92902d749e4263f71162bea840",
-   "display_name": "Python 3.8.8 64-bit (virtualenv)"
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
@@ -46,12 +46,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate a Sheldon-Sutcliffe spectrum (equal biomass in log-spaced bins) with some random noise superimposed\n",
+    "# Generate a Sheldon-Sutcliffe spectrum (equal biomass in log-spaced bins)\n",
+    "# with some random noise superimposed\n",
+    "\n",
+    "noise_sd = 0.2   # coefficient of variation of log biomass\n",
+    "\n",
     "binbounds = numpy.arange(-3, 7)  # log10 of individual mass\n",
     "bincentres = 0.5 * (binbounds[1:] + binbounds[:-1])\n",
     "binwidth = 10.**binbounds[1:] - 10.**binbounds[:-1]\n",
     "biomass = numpy.ones_like(bincentres)\n",
-    "biomass = 10.**(.9 + 0.2*numpy.random.normal(size=bincentres.shape))"
+    "biomass = 10.**(1. + noise_sd * numpy.random.normal(size=bincentres.shape))"
    ]
   },
   {
