--- a/notebooks/2 - model ingredients.ipynb
+++ b/notebooks/2 - model ingredients.ipynb
@@ -35,7 +35,9 @@
     "* [Hartvig et al, 2011](https://doi.org/10.1016/j.jtbi.2010.12.006)\n",
     "* [Blanchard et al, 2012](https://doi.org/10.1098/rstb.2012.0231)\n",
     "* [Scott et al, 2014](https://doi.org/10.1111/2041-210X.12256)\n",
-    "* [Blanchard et al, 2014](https://doi.org/10.1111/1365-2664.12238)"
+    "* [Blanchard et al, 2014](https://doi.org/10.1111/1365-2664.12238)\n",
+    "\n",
+    "For notation we follow [Blanchard et al, 2014](https://doi.org/10.1111/1365-2664.12238) and [Scott et al, 2014](https://doi.org/10.1111/2041-210X.12256)."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -58,20 +60,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up a grid for wet mass\n",
+    "# Set up a grid for wet mass - to be used for plotting\n",
     "w_min, w_max = 0.0001, 1e6\n",
     "w_grid = 10.**numpy.linspace(numpy.log10(w_min), numpy.log10(w_max), 1000)"
    ]
   },
   {
    "source": [
+    "# It all begins with an individual fish\n",
+    "\n",
     "## Size-based prey preference\n",
     "\n",
     "The preference of a predator with wet mass $w$ for prey of $w_p$ takes the shape of a lognormal distribution:\n",
     "\n",
     "$$\\phi(w_p/w) = \\exp\\left[\\frac{-(\\ln{(\\beta w_p / w)})^2}{2\\sigma^2}\\right]$$\n",
     "\n",
-    "The optimal predator : prey mass ratio $\\beta$ is 100 in all studies referenced above, but the width of the distribution varies:\n",
+    "The optimal predator : prey mass ratio $\\beta$ is 100 in all studies listed above, but the width of the distribution varies:\n",
     "* for a single species: $\\sigma = 1$\n",
     "* for a community: $\\sigma = 2$ ([Scott et al, 2014](https://doi.org/10.1111/2041-210X.12256)) or $\\sigma = \\ln{10} \\approx 2.3$ ([Blanchard et al, 2012](https://doi.org/10.1098/rstb.2012.0231))"
    ],
@@ -87,11 +91,12 @@
     "beta = 100.                        # preferred predator : prey amss ratio\n",
     "sigmas = [1, 2., numpy.log(10.)]   # standard deviation of selectivity function (ln g)\n",
     "w_predator = 100.\n",
+    "\n",
     "fig, ax = pyplot.subplots()\n",
     "for sigma in sigmas:\n",
-    "    rho = numpy.exp(-(numpy.log(w_grid) - numpy.log(w_predator / beta))**2 / (2. * sigma**2))\n",
-    "    ax.plot(w_grid, rho, label='$\\sigma = %.2f$' % sigma)\n",
-    "ax.set_xscale('log')\n",
+    "    phi = numpy.exp(-(numpy.log(w_grid) - numpy.log(w_predator / beta))**2 / (2. * sigma**2))\n",
+    "    ax.semilogx(w_grid, phi, label='$\\sigma = %.2f$' % sigma)\n",
+    "\n",
     "ax.axvline(w_predator, linestyle='--', color='k', label='predator mass')\n",
     "ax.set_ylabel('predator preference (-)')\n",
     "ax.set_xlabel('prey mass (g)')\n",
@@ -105,11 +110,11 @@
     "\n",
     "Available food (g/m³) is essentially the sum of all available prey, weighted by preference. With prey expressed as biomass density (concentration per unit individual mass), that sum becomes an integral over individual prey mass:\n",
     "\n",
-    "$$E_a = \\int{\\phi(w_p/w)} C(w_p) dw_p$$ with $C(w_p)$ the concentration density (m-3) of prey with wet mass $w_p$\n",
+    "$$E_a = \\int{\\phi(w_p/w)} c(w_p) dw_p$$ with $c(w_p)$ the concentration density (1/m³) of prey with wet mass $w_p$\n",
     "\n",
     "Encountered food (g/individual predator/yr) is the product rate of available food and the clearance rate $V$ (m³/yr):\n",
     "\n",
-    "$$E_e = V E_a$$$\n",
+    "$$E_e = V E_a$$\n",
     "\n",
     "This rate describes the volume of water searched for prey per unit time. It is an allometric function of wet mass: $V=\\gamma w^q$."
    ],
@@ -122,6 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# A few different allometric relationships for clearance rate\n",
     "benoit_blanchard = 640 * w_grid**0.82\n",
     "acuna = 10.**14.076 * w_grid**0.926 * 1e-3 * 365 * numpy.exp(-0.65 / 8.62e-5 / (273.15 + 13))  # convert from L to m3, from 1/d to 1/yr, apply Arrhenius temperature correction\n",
     "kiorboe = 10.**7.31 * (0.1 * w_grid)**(1.01) * 1e-6 * 365 * 2.8**-0.2  # convert from ml to m3, from 1/d to 1/yr, apply Q10 temperature correction\n",
@@ -137,6 +143,7 @@
     "ax.legend()\n",
     "ax.grid()\n",
     "\n",
+    "# Load and plot the Acuña dataset\n",
     "import csv\n",
     "ww, clearance = [], []\n",
     "with open('../datasets/Acuna_et_al_2012_table_S1.dat') as f:\n",
@@ -152,11 +159,11 @@
    "source": [
     "## Ingestion\n",
     "\n",
-    "By default, ingestion is described with Type II (\"Michaelis-Menten\") functional response. Its maximum rate (g/yr) is yet again an allometric function of wet mass: $h w^n$. The value of the functional response (0-1), or \"food level\", equals:\n",
+    "By default, ingestion is described with Type II (\"Michaelis-Menten\") functional response. Its maximum rate (g/yr) is yet another allometric function of wet mass: $h w^n$. The value of the functional response (0-1), or \"food level\", equals:\n",
     "\n",
     "$$f = \\frac{E_e}{E_e + h w^n}$$\n",
     "\n",
-    "This is thought to lie around 0.6 in natural systems (Hartvig et al. 2011).\n",
+    "This food level is thought to lie around 0.6 in natural systems (Hartvig et al. 2011).\n",
     "\n",
     "Actual ingestion is the product of th maximum ingestion rate and the food level:\n",
     "\n",
@@ -351,11 +358,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# From individual to population\n",
+    "\n",
+    "So far we have talked about the behaviour of an individual predator.\n",
+    "The behaviour of this individual is completely defined by its wet mass (that is is only \"state\").\n",
+    "A population of such individuals is described by a structured population model.\n",
+    "Mathematically this is a partial differential equation\n",
+    "for predator biomass density $W$ (g/m²) per unit individual wet mass $w$ (g):\n",
+    "\n",
+    "$$\\frac{\\partial W}{\\partial t} = \\frac{\\partial}{\\partial w}\\left[g(w) W\\right] - \\mu W$$\n",
+    "\n",
+    "Here, $g(w)$ is the growth rate (g/time) of an individual of wet mass $w$.\n",
+    "$\\mu$ is the combined mortality (1/time) due to predation, fisheries, intrinsic and senescence. Note: some authors formulate the model in terms of predator _abundancy_ density $N = W / w$.\n",
+    "\n",
+    "This is solved numerically with a first-order upwind discretisation.\n",
+    "This is the moment the continuous spectrum becomes represented by a number of bins."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
