plot mortality and spectrum as function of time+mass

--- a/notebooks/3 - idealized solutions.ipynb
+++ b/notebooks/3 - idealized solutions.ipynb
@@ -65,7 +65,7 @@
     "        # spectrum partition\n",
     "        w_min=1e-3,                   # minimum size for the predator spectrum (g)\n",
     "        w_inf=1e6,                    # maximum size for the predator spectrum (g)\n",
-    "        nclass=100,                   # number of size classes for the predator spectrum (g)\n",
+    "        nclass=100,                   # number of size classes for the predator spectrum\n",
     "\n",
     "        # temperature dependence\n",
     "        T_dependence=1,               # temperature dependence of rates (0=none, 1=Arrhenius)\n",
@@ -120,7 +120,8 @@
     "\n",
     "def run_and_plot(ax, label=None, *args, **kwargs):\n",
     "    result = run(verbose=False, *args, **kwargs)\n",
-    "    result.plot_spectrum(ax=ax, style='-', label=label)"
+    "    result.plot_spectrum(ax=ax, style='-', label=label)\n",
+    "    return result"
    ]
   },
   {
@@ -181,6 +182,41 @@
    "outputs": [],
    "source": [
     "run_and_plot(ax, z0pre=0., z_spre=0., label='no residual mortality')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = pyplot.subplots()\n",
+    "logw = numpy.log10(result.model.bin_masses[1]) - numpy.log10(result.model.bin_masses[0])\n",
+    "x, y = numpy.meshgrid(result.t - result.t[0], result.model.bin_masses)\n",
+    "c = ax.contourf(x, y, result.spectrum.T / logw)\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xlabel('time (d)')\n",
+    "ax.set_ylabel('individual mass (g)')\n",
+    "cb = fig.colorbar(c)\n",
+    "cb.set_label('biomass per log10 individual mass (g)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mortality = result.get_loss_rates()\n",
+    "fig, ax = pyplot.subplots()\n",
+    "logw = numpy.log10(result.model.bin_masses[1]) - numpy.log10(result.model.bin_masses[0])\n",
+    "x, y = numpy.meshgrid(result.t[1:] - result.t[1], result.model.bin_masses)\n",
+    "c = ax.contourf(x, y, mortality[1:,:].T)\n",
+    "ax.set_yscale('log')\n",
+    "ax.set_xlabel('time (d)')\n",
+    "ax.set_ylabel('individual mass (g)')\n",
+    "cb = fig.colorbar(c)\n",
+    "cb.set_label('mortality (1/d)')"
    ]
   },
   {
