--- a/install
+++ b/install
@@ -12,6 +12,7 @@ rm -rf ${WORK_DIR}
 WORK_DIR=`mktemp -d`
 cd ${WORK_DIR}
 cmake ${REPO_DIR}/extern/gotm -DFABM_INSTITUTES="gotm;medusa;mizer" -DFABM_MEDUSA_BASE=${REPO_DIR}/extern/fabm-medusa -DFABM_MIZER_BASE=${REPO_DIR}/extern/fabm-mizer
-make install
+make
+cp gotm ~/.local/bin/
 cd -
 rm -rf ${WORK_DIR}
